--- a/blanco/index.html
+++ b/blanco/index.html
@@ -65,6 +65,10 @@
       </button>
       <!-- Mismo ID que antes -->
 
+      <div class="infiltrated-display" id="infiltratedNumber">
+        Infiltrados: <span id="infiltratedNumberValue">0</span>
+      </div>
+
       <!-- Botones de navegación inferior (< >) -->
       <div class="navigation-buttons">
         <button class="nav-button" id="prevPlayerBtn" disabled><</button>
