--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Games</h1>
     <ul>
       <li><a href="blanco/index.html">Blanco</a></li>
-      <!-- <li><a href="ahorcado/index.html">Ahorcado</a></li> -->
+      <li><a href="preguntas/index.html">Preguntas</a></li>
     </ul>
   </body>
 </html>
