--- a/preguntas/index.html
+++ b/preguntas/index.html
@@ -8,10 +8,7 @@
   </head>
   <body>
     <div class="container">
-      <h1 id="mainText">
-        Cita las 3 primeras cosas que harías si te convirtieras en Presidente
-        del Gobierno
-      </h1>
+      <h1 id="mainText"></h1>
 
       <div class="controls">
         <button id="changeTextBtn" class="right-bottom">></button>
